po: update po/sr_RS@latin/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/provinces.po
+++ b/po/sr_RS@latin/provinces.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-30 01:20+0000\n"
-"Last-Translator: Bojana Radulović <bojana@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-01-30 13:57+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -7477,7 +7477,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Jejudo"
-msgstr ""
+msgstr "Čedžu"
 
 msgctxt "province"
 msgid "Jeonrabugdo"
@@ -7841,15 +7841,15 @@ msgstr "Mokhotlong"
 
 msgctxt "province"
 msgid "Qacha's Nek"
-msgstr ""
+msgstr "Kačas Nek"
 
 msgctxt "province"
 msgid "Quthing"
-msgstr ""
+msgstr "Kuting"
 
 msgctxt "province"
 msgid "Thaba-Tseka"
-msgstr ""
+msgstr "Taba-Ceka"
 
 msgctxt "province"
 msgid "Alytaus Apskritis"
@@ -14661,43 +14661,43 @@ msgstr ""
 
 msgctxt "province"
 msgid "Abaco Islands"
-msgstr ""
+msgstr "Veliki Abako"
 
 msgctxt "province"
 msgid "Andros Island"
-msgstr ""
+msgstr "Ostrvo Andros"
 
 msgctxt "province"
 msgid "Berry Islands"
-msgstr ""
+msgstr "Ostrva Beri"
 
 msgctxt "province"
 msgid "Eleuthera"
-msgstr ""
+msgstr "Eljutera"
 
 msgctxt "province"
 msgid "Grand Bahama"
-msgstr ""
+msgstr "Velika Bahama"
 
 msgctxt "province"
 msgid "Rum Cay"
-msgstr ""
+msgstr "Ram-Ki"
 
 msgctxt "province"
 msgid "San Salvador Island"
-msgstr ""
+msgstr "Ostrvo San Salvador"
 
 msgctxt "province"
 msgid "Kongo central"
-msgstr ""
+msgstr "Donji Kongo"
 
 msgctxt "province"
 msgid "Kwango"
-msgstr ""
+msgstr "Kvango"
 
 msgctxt "province"
 msgid "Kwilu"
-msgstr ""
+msgstr "Kvilu"
 
 msgctxt "province"
 msgid "Mai-Ndombe"
@@ -14705,7 +14705,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Kasai"
-msgstr ""
+msgstr "Kazai"
 
 msgctxt "province"
 msgid "Lulua"
@@ -14713,67 +14713,67 @@ msgstr ""
 
 msgctxt "province"
 msgid "Lomami"
-msgstr ""
+msgstr "Lomami"
 
 msgctxt "province"
 msgid "Sankuru"
-msgstr ""
+msgstr "Sankuru"
 
 msgctxt "province"
 msgid "Ituri"
-msgstr ""
+msgstr "Ituri"
 
 msgctxt "province"
 msgid "Haut-Uele"
-msgstr ""
+msgstr "O Uele"
 
 msgctxt "province"
 msgid "Tshopo"
-msgstr ""
+msgstr "Čopo"
 
 msgctxt "province"
 msgid "Bas-Uele"
-msgstr ""
+msgstr "Ba Uele"
 
 msgctxt "province"
 msgid "Nord-Ubangi"
-msgstr ""
+msgstr "Nor Ubangi"
 
 msgctxt "province"
 msgid "Mongala"
-msgstr ""
+msgstr "Mongala"
 
 msgctxt "province"
 msgid "Sud-Ubangi"
-msgstr ""
+msgstr "Sud Ubangi"
 
 msgctxt "province"
 msgid "Tshuapa"
-msgstr ""
+msgstr "Čuapa"
 
 msgctxt "province"
 msgid "Haut-Lomami"
-msgstr ""
+msgstr "O Lomami"
 
 msgctxt "province"
 msgid "Lualaba"
-msgstr ""
+msgstr "Lualaba"
 
 msgctxt "province"
 msgid "Haut-Katanga"
-msgstr ""
+msgstr "O Katanga"
 
 msgctxt "province"
 msgid "Tanganyika"
-msgstr ""
+msgstr "Tanganjika"
 
 msgctxt "province"
 msgid "Metropolitan Manila"
-msgstr ""
+msgstr "Metro Manila"
 
 msgctxt "province"
 msgid "Yinchuan"
-msgstr ""
+msgstr "Jinčuan"
 
 msgctxt "province"
 msgid "Shizuishan"
@@ -15261,500 +15261,500 @@ msgstr ""
 
 msgctxt "province"
 msgid "Ankaran"
-msgstr ""
+msgstr "Ankaran"
 
 msgctxt "province"
 msgid "Apače"
-msgstr ""
+msgstr "Apače"
 
 msgctxt "province"
 msgid "Cirkulane"
-msgstr ""
+msgstr "Cirkulane"
 
 msgctxt "province"
 msgid "Gorje"
-msgstr ""
+msgstr "Gorje"
 
 msgctxt "province"
 msgid "Kostanjevica na Krki"
-msgstr ""
+msgstr "Kostanjevica na Krki"
 
 msgctxt "province"
 msgid "Log-Dragomer"
-msgstr ""
+msgstr "Log-Dragomer"
 
 msgctxt "province"
 msgid "Makole"
-msgstr ""
+msgstr "Makole"
 
 msgctxt "province"
 msgid "Mirna"
-msgstr ""
+msgstr "Mirna"
 
 msgctxt "province"
 msgid "Mokronog-Trebelno"
-msgstr ""
+msgstr "Mokronog-Trebelno"
 
 msgctxt "province"
 msgid "Odranci"
-msgstr ""
+msgstr "Odranci"
 
 msgctxt "province"
 msgid "Oplotnica"
-msgstr ""
+msgstr "Oplotnica"
 
 msgctxt "province"
 msgid "Ormož"
-msgstr ""
+msgstr "Ormož"
 
 msgctxt "province"
 msgid "Osilnica"
-msgstr ""
+msgstr "Osilnica"
 
 msgctxt "province"
 msgid "Pesnica"
-msgstr ""
+msgstr "Pesnica"
 
 msgctxt "province"
 msgid "Piran"
-msgstr ""
+msgstr "Piran"
 
 msgctxt "province"
 msgid "Pivka"
-msgstr ""
+msgstr "Pivka"
 
 msgctxt "province"
 msgid "Podčetrtek"
-msgstr ""
+msgstr "Podčetrtek"
 
 msgctxt "province"
 msgid "Podlehnik"
-msgstr ""
+msgstr "Podlehnik"
 
 msgctxt "province"
 msgid "Podvelka"
-msgstr ""
+msgstr "Podvelka"
 
 msgctxt "province"
 msgid "Poljčane"
-msgstr ""
+msgstr "Poljčane"
 
 msgctxt "province"
 msgid "Polzela"
-msgstr ""
+msgstr "Polzela"
 
 msgctxt "province"
 msgid "Postojna"
-msgstr ""
+msgstr "Postojna"
 
 msgctxt "province"
 msgid "Prebold"
-msgstr ""
+msgstr "Prebold"
 
 msgctxt "province"
 msgid "Preddvor"
-msgstr ""
+msgstr "Preddvor"
 
 msgctxt "province"
 msgid "Prevalje"
-msgstr ""
+msgstr "Prevalje"
 
 msgctxt "province"
 msgid "Ptuj"
-msgstr ""
+msgstr "Ptuj"
 
 msgctxt "province"
 msgid "Puconci"
-msgstr ""
+msgstr "Puconci"
 
 msgctxt "province"
 msgid "Rače-Fram"
-msgstr ""
+msgstr "Rače-Fram"
 
 msgctxt "province"
 msgid "Radeče"
-msgstr ""
+msgstr "Radeče"
 
 msgctxt "province"
 msgid "Radenci"
-msgstr ""
+msgstr "Radenci"
 
 msgctxt "province"
 msgid "Radlje ob Dravi"
-msgstr ""
+msgstr "Radlje ob Dravi"
 
 msgctxt "province"
 msgid "Radovljica"
-msgstr ""
+msgstr "Radovljica"
 
 msgctxt "province"
 msgid "Ravne na Koroškem"
-msgstr ""
+msgstr "Ravne na Koroškem"
 
 msgctxt "province"
 msgid "Razkrižje"
-msgstr ""
+msgstr "Raskrižje"
 
 msgctxt "province"
 msgid "Rečica ob Savinji"
-msgstr ""
+msgstr "Rečica ob Savinji"
 
 msgctxt "province"
 msgid "Renče-Vogrsko"
-msgstr ""
+msgstr "Renče-Vogrsko"
 
 msgctxt "province"
 msgid "Ribnica"
-msgstr ""
+msgstr "Ribnica"
 
 msgctxt "province"
 msgid "Ribnica na Pohorju"
-msgstr ""
+msgstr "Ribnica na Pohorju"
 
 msgctxt "province"
 msgid "Rogaška Slatina"
-msgstr ""
+msgstr "Rogaška Slatina"
 
 msgctxt "province"
 msgid "Rogašovci"
-msgstr ""
+msgstr "Rogašovci"
 
 msgctxt "province"
 msgid "Rogatec"
-msgstr ""
+msgstr "Rogatec"
 
 msgctxt "province"
 msgid "Ruše"
-msgstr ""
+msgstr "Ruše"
 
 msgctxt "province"
 msgid "Selnica ob Dravi"
-msgstr ""
+msgstr "Selnica ob Dravi"
 
 msgctxt "province"
 msgid "Semič"
-msgstr ""
+msgstr "Semič"
 
 msgctxt "province"
 msgid "Šentrupert"
-msgstr ""
+msgstr "Šentrupert"
 
 msgctxt "province"
 msgid "Sevnica"
-msgstr ""
+msgstr "Sevnica"
 
 msgctxt "province"
 msgid "Sežana"
-msgstr ""
+msgstr "Sežana"
 
 msgctxt "province"
 msgid "Slovenj Gradec"
-msgstr ""
+msgstr "Slovenj Gradec"
 
 msgctxt "province"
 msgid "Slovenska Bistrica"
-msgstr ""
+msgstr "Slovenska Bistrica"
 
 msgctxt "province"
 msgid "Slovenske Konjice"
-msgstr ""
+msgstr "Slovenske Konjice"
 
 msgctxt "province"
 msgid "Šmarješke Toplice"
-msgstr ""
+msgstr "Šmarješke Toplice"
 
 msgctxt "province"
 msgid "Sodražica"
-msgstr ""
+msgstr "Sodražica"
 
 msgctxt "province"
 msgid "Solčava"
-msgstr ""
+msgstr "Solčava"
 
 msgctxt "province"
 msgid "Središče ob Dravi"
-msgstr ""
+msgstr "Središče ob Dravi"
 
 msgctxt "province"
 msgid "Starše"
-msgstr ""
+msgstr "Starše"
 
 msgctxt "province"
 msgid "Straža"
-msgstr ""
+msgstr "Straža"
 
 msgctxt "province"
 msgid "Sveta Trojica v Slovenskih goricah"
-msgstr ""
+msgstr "Sveta Trojica v Slovenskih goricah"
 
 msgctxt "province"
 msgid "Sveti Jurij v Slovenskih goricah"
-msgstr ""
+msgstr "Sveti Jurij v Slovenskih goricah"
 
 msgctxt "province"
 msgid "Sveti Tomaž"
-msgstr ""
+msgstr "Sveti Tomaž"
 
 msgctxt "province"
 msgid "Vodice"
-msgstr ""
+msgstr "Vodice"
 
 msgctxt "province"
 msgid "Abkhazia"
-msgstr ""
+msgstr "Abhazija"
 
 msgctxt "province"
 msgid "Adjara"
-msgstr ""
+msgstr "Adžarija"
 
 msgctxt "province"
 msgid "Tbilisi"
-msgstr ""
+msgstr "Tbilisi"
 
 msgctxt "province"
 msgid "Guria"
-msgstr ""
+msgstr "Gurija"
 
 msgctxt "province"
 msgid "Imereti"
-msgstr ""
+msgstr "Imeretija"
 
 msgctxt "province"
 msgid "Kakheti"
-msgstr ""
+msgstr "Kahetija"
 
 msgctxt "province"
 msgid "Kvemo Kartli"
-msgstr ""
+msgstr "Donji Kartli"
 
 msgctxt "province"
 msgid "Mtskheta-Mtianeti"
-msgstr ""
+msgstr "Mcheta-Mtijanetija"
 
 msgctxt "province"
 msgid "Racha-Lechkhumi and Kvemo Svaneti"
-msgstr ""
+msgstr "Rača-Lečhumi i Donja Svanetija"
 
 msgctxt "province"
 msgid "Samegrelo-Zemo Svaneti"
-msgstr ""
+msgstr "Megrelija - Gornja Svanetija"
 
 msgctxt "province"
 msgid "Samtskhe-Javakheti"
-msgstr ""
+msgstr "Samche-Džavahetija"
 
 msgctxt "province"
 msgid "Shida Kartli"
-msgstr ""
+msgstr "Unutrašnji Kartli"
 
 msgctxt "province"
 msgid "Harjumaa"
-msgstr ""
+msgstr "Harju"
 
 msgctxt "province"
 msgid "Hiiumaa"
-msgstr ""
+msgstr "Hijuma"
 
 msgctxt "province"
 msgid "Ida-Virumaa"
-msgstr ""
+msgstr "Ida-Viru"
 
 msgctxt "province"
 msgid "Jõgevamaa"
-msgstr ""
+msgstr "Jigeva"
 
 msgctxt "province"
 msgid "Järvamaa"
-msgstr ""
+msgstr "Harva"
 
 msgctxt "province"
 msgid "Läänemaa"
-msgstr ""
+msgstr "Ljaene"
 
 msgctxt "province"
 msgid "Lääne-Virumaa"
-msgstr ""
+msgstr "Ljaene-Viru"
 
 msgctxt "province"
 msgid "Põlvamaa"
-msgstr ""
+msgstr "Pilva"
 
 msgctxt "province"
 msgid "Pärnumaa"
-msgstr ""
+msgstr "Pjarnu"
 
 msgctxt "province"
 msgid "Raplamaa"
-msgstr ""
+msgstr "Rapla"
 
 msgctxt "province"
 msgid "Saaremaa"
-msgstr ""
+msgstr "Sarama"
 
 msgctxt "province"
 msgid "Tartumaa"
-msgstr ""
+msgstr "Tartu"
 
 msgctxt "province"
 msgid "Viljandimaa"
-msgstr ""
+msgstr "Viljandi"
 
 msgctxt "province"
 msgid "Võrumaa"
-msgstr ""
+msgstr "Viru"
 
 msgctxt "province"
 msgid "Klaipėdos Apskritis"
-msgstr ""
+msgstr "Klajdepski okrug"
 
 msgctxt "province"
 msgid "Marijampolės Apskritis"
-msgstr ""
+msgstr "Marijampolski okrug"
 
 msgctxt "province"
 msgid "Panevėžio Apskritis"
-msgstr ""
+msgstr "Panevežiski okrug"
 
 msgctxt "province"
 msgid "Šiaulių Apskritis"
-msgstr ""
+msgstr "Šjauljajski okrug"
 
 msgctxt "province"
 msgid "Tauragės Apskritis"
-msgstr ""
+msgstr "Taurageski okrug"
 
 msgctxt "province"
 msgid "Telšių Apskritis"
-msgstr ""
+msgstr "Telšjajski okrug"
 
 msgctxt "province"
 msgid "Bataan"
-msgstr ""
+msgstr "Batan"
 
 msgctxt "province"
 msgid "Al Bahah"
-msgstr ""
+msgstr "Al-Baha"
 
 msgctxt "province"
 msgid "Al Hudud Ash Shamaliyah"
-msgstr ""
+msgstr "Severna granica"
 
 msgctxt "province"
 msgid "Blekinge län"
-msgstr ""
+msgstr "Blećinge"
 
 msgctxt "province"
 msgid "Dalarnas län"
-msgstr ""
+msgstr "Dalarna"
 
 msgctxt "province"
 msgid "Gotlands län"
-msgstr ""
+msgstr "Gotland"
 
 msgctxt "province"
 msgid "Gävleborgs län"
-msgstr ""
+msgstr "Jevleborg"
 
 msgctxt "province"
 msgid "Hallands län"
-msgstr ""
+msgstr "Haland"
 
 msgctxt "province"
 msgid "Jämtlands län"
-msgstr ""
+msgstr "Jemtland"
 
 msgctxt "province"
 msgid "Jönkopings län"
-msgstr ""
+msgstr "Jenćeping"
 
 msgctxt "province"
 msgid "Kalmar län"
-msgstr ""
+msgstr "Kalmar"
 
 msgctxt "province"
 msgid "Kronobergs län"
-msgstr ""
+msgstr "Krunuberg"
 
 msgctxt "province"
 msgid "Norrbottens län"
-msgstr ""
+msgstr "Nurboten"
 
 msgctxt "province"
 msgid "Skåne län"
-msgstr ""
+msgstr "Skone"
 
 msgctxt "province"
 msgid "Stockholms län"
-msgstr ""
+msgstr "Stokholm"
 
 msgctxt "province"
 msgid "Södermanlands län"
-msgstr ""
+msgstr "Sedermanland"
 
 msgctxt "province"
 msgid "Uppsala län"
-msgstr ""
+msgstr "Upsala"
 
 msgctxt "province"
 msgid "Värmlands län"
-msgstr ""
+msgstr "Vermland"
 
 msgctxt "province"
 msgid "Västerbottens län"
-msgstr ""
+msgstr "Vesterboten"
 
 msgctxt "province"
 msgid "Västernorrlands län"
-msgstr ""
+msgstr "Vesternurland"
 
 msgctxt "province"
 msgid "Västmanlands län"
-msgstr ""
+msgstr "Vestmanland"
 
 msgctxt "province"
 msgid "Västra Götalands län"
-msgstr ""
+msgstr "Vestra Jetaland"
 
 msgctxt "province"
 msgid "Örebro län"
-msgstr ""
+msgstr "Erebro"
 
 msgctxt "province"
 msgid "Östergötlands län"
-msgstr ""
+msgstr "Esterjetland"
 
 msgctxt "province"
 msgid "Phuket"
-msgstr ""
+msgstr "Puket"
 
 msgctxt "province"
 msgid "Wake Island"
-msgstr ""
+msgstr "Ostrvo Vejk"
 
 msgctxt "province"
 msgid "Northern Ostrobothnia"
-msgstr ""
+msgstr "Severna Ostrobotnija"
 
 msgctxt "province"
 msgid "Telangana"
-msgstr ""
+msgstr "Telangana"
 
 msgctxt "province"
 msgid "Guadeloupe"
-msgstr ""
+msgstr "Gvadelup"
 
 msgctxt "province"
 msgid "Martinique"
-msgstr ""
+msgstr "Martinik"
 
 msgctxt "province"
 msgid "Guyane"
-msgstr ""
+msgstr "Francuska Gvajana"
 
 msgctxt "province"
 msgid "La Réunion"
-msgstr ""
+msgstr "Reinion"
 
 msgctxt "province"
 msgid "Mayotte"
-msgstr ""
+msgstr "Majot"
