po: update po/sr_RS@latin/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/event.po
+++ b/po/sr_RS@latin/event.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-30 05:29+0000\n"
+"PO-Revision-Date: 2017-01-30 06:20+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -3057,14 +3057,14 @@ msgid ""
 "Save the CSV file with your participant data and 'contact matching' data to "
 "your local hard drive (or an accessible drive on your network) - and you are"
 " now ready for step 1 (Upload Data)."
-msgstr ""
+msgstr "Sačuvajte CSV fajl sa podacima o učesnicima i podatke za 'poređenje kontakta' na vaš hard disk (ili neku lokaciju na vašoj mreži) - i spremni ste za prvi korak (Postavljanje podataka)."
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid ""
 "For each import, you can either INSERT new event registration (participant) "
 "records, or UPDATE existing records. You can not do both types of operations"
 " in a single import session."
-msgstr ""
+msgstr "Za svaki import, možete uneti nove zapise o registraciji za događaj (učešću), ili ažurirati postojeće zapise. Ne možete uraditi obe operacije tokom jednog importa."
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid ""
@@ -3081,7 +3081,7 @@ msgid ""
 "If you are UPDATING existing participants, you will need to include a column"
 " containing the unique CiviCRM-assigned participant ID to match to the "
 "existing participant record."
-msgstr ""
+msgstr "Ukoliko ažurirate postojeće učesnike, neophodno je da uključite kolonu koja sadrži jedinstveni ID učesnika koji dodeljuje CiviCRM koji se slaže sa postojećim zapisom o učesniku."
 
 #: templates/CRM/Event/Import/Form/DataSource.tpl
 msgid ""
@@ -3094,7 +3094,7 @@ msgid ""
 "Files to be imported must be in the 'comma-separated-values' format (CSV) "
 "and must contain data needed to match the participant data to an existing "
 "contact in your CiviCRM database."
-msgstr ""
+msgstr "Fajlovi za import moraju biti u CSV ('comma-separated-values') formatu i moraju sadržati potrebne podatke za poređenje podatakaa o učesnicima sa postojećim zapisima o kontaktima u vašoj CiviCRM bazi podataka."
 
 #: templates/CRM/Event/Import/Form/DataSource.tpl
 msgid ""
@@ -3164,7 +3164,7 @@ msgid ""
 "You can <a href=\"%1\">Download Conflicts</a>. You may then review these "
 "records to determine if they are actually conflicts, and correct the "
 "participant IDs for those that are not."
-msgstr ""
+msgstr "Možete <a href=\"%1\">Preuzeti konflikte</a>. Možete pregledati ove zapise da utvrdite da li su zapravo konflikti, i ispravite ID učesnika za one koji nisu."
 
 #: templates/CRM/Event/Import/Form/Summary.tpl
 msgid ""
@@ -3182,7 +3182,7 @@ msgid ""
 "You can <a href=\"%1\">Download Duplicates</a>. You may then review these "
 "records to determine if they are actually duplicates, and correct the "
 "participant IDs for those that are not."
-msgstr ""
+msgstr "Možete <a href=\"%1\">Preuzeti duplikate</a>. Možete pregledati ove zapise da utvrdite da li su zapravo duplikati, i ispravite ID učesnika za one koji nisu."
 
 #: templates/CRM/Event/Import/Form/Summary.tpl
 msgid "Rows with mismatched participant IDs... (NOT updated)."
@@ -3421,13 +3421,13 @@ msgid ""
 "CiviEvent also creates an RSS 2.0 formatted feed which can be subscribed to "
 "people using RSS readers and can be displayed in most modern browsers. The "
 "RSS Feed URL for CiviEvent on this site:"
-msgstr ""
+msgstr "CiviEvent kreira RSS 2.0 feed na koji se korisnici sa RSS čitačima mogu prijaviti i koji može biti prikazan u većini novijih pretraživača. URL za pristup RSSu za CiviEvent na ovom sajtu:"
 
 #: templates/CRM/Event/Page/ManageEvent.hlp
 msgid ""
 "You can also use the additional parameters shown above to filter the events "
 "included in the RSS feed."
-msgstr ""
+msgstr "Možete koristiti dodatne parametre prikazane iznad kao filter za događaje uključene u RSS feed."
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "Add Event"
@@ -3471,7 +3471,7 @@ msgstr "Trenutno nema učesnika registrovanih za ovaj događaj."
 
 #: templates/CRM/Event/Page/Tab.tpl
 msgid "This page lists all event registrations for %1 since inception."
-msgstr ""
+msgstr "Ova stranica lista sve registracije za događaje za %1."
 
 #: templates/CRM/Event/Page/Tab.tpl
 msgid ""
@@ -3619,7 +3619,7 @@ msgstr "Vaša registracija za događaj na čekanju za %1 je istekla\njer niste p
 msgid ""
 "Please contact us at %1 or send email to %2 if you have questions\n"
 "or want to inquire about reinstating your registration for this event."
-msgstr ""
+msgstr "Kontaktirajte nas na %1 ili pošaljite email %2 ukoliko imate pitanja\nili želite da se raspitate o ponovnoj registraciji za ovaj događaj."
 
 #: xml/templates/message_templates/participant_expired_subject.tpl
 msgid "Event registration has expired for %1"
@@ -3642,7 +3642,7 @@ msgstr "Proverite da li je vaš opseg datuma za registrovanje u odgovarajućem h
 
 #: CRM/Event/Cart/DAO/Cart.php
 msgid "Cart ID"
-msgstr ""
+msgstr "ID korpe"
 
 #: CRM/Event/Cart/DAO/Cart.php
 msgid "Complete?"
@@ -3650,7 +3650,7 @@ msgstr "Završeno?"
 
 #: CRM/Event/Cart/DAO/EventInCart.php
 msgid "Event In Cart"
-msgstr ""
+msgstr "Događaj u korpi"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role"
@@ -3826,7 +3826,7 @@ msgstr "Status učesnika - promena (emailovi poslati)"
 
 #: CRM/Event/Task.php
 msgid "Name badges - print"
-msgstr ""
+msgstr "Bedževi sa imenima - štampa"
 
 #: CRM/Event/Task.php
 msgid "PDF letter - print for participants"
@@ -3861,7 +3861,7 @@ msgstr "Ograničite broj dodatnih učesnika koji mogu biti registrovani sa istom
 msgid ""
 "Eg: if you choose '2' then the lead booker can bring 2 guests; there would "
 "be a limit of 3 participants in total per booking."
-msgstr ""
+msgstr "Npr: Ukoliko izaberete '2' osoba koja registruje može dovesti dva gosta;  postoji ograničenje od 3 učesnika po registraciji."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -3872,11 +3872,11 @@ msgid ""
 "status - change' task. Approved participants will move to 'Pending from "
 "approval' status, and will be sent an email with a link to complete their "
 "registration (including paying event fees - if any). "
-msgstr ""
+msgstr "Ukoliko štiklirate ovu kućicu, učesnicima koje se registruju će biti neophodno odobrenje administratora kako bi završili registracioni proces. Učesnici će imati 'Čeka odobrenje' status. Možete pregledati i odobriti učesnike koristeći 'Nađi učesnike' - izaberite 'Promeni status učesnika'. Odobreni učesnici će dobiti 'Čekanje nakon odobrenja' status  i biće im poslat email sa linkom za kompletiranje registracije (uključujući i plaćanje kotizacije - ukoliko postoji)."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Allow Self-service Cancellation or Transfer?"
-msgstr ""
+msgstr "Dozvoli da učesnik sam otkaže ili prenese događaj na drugog učesnika"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -3891,7 +3891,7 @@ msgid ""
 "<strong>Automated refunds for cancellations are NOT currently "
 "supported.</strong> Participants who have paid for an event will be notified"
 " that cancellations are not refundable."
-msgstr ""
+msgstr "<strong>Automatska refundiranja za otkazivanje trenutno NISU podržana.</strong> Učesnici koji su platili kotizaciju za događaj će biti obavešteni da nema refundacije po otkazivanju."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Cancellation or Transfer Time Limit"
