--- a/po/sr_RS@latin/campaign.po
+++ b/po/sr_RS@latin/campaign.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-23 13:42+0000\n"
+"PO-Revision-Date: 2017-01-31 13:50+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -349,7 +349,7 @@ msgstr ""
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Maximum reserved at one time should be a positive number"
-msgstr ""
+msgstr "Maksimum rezervisanih odjednom mora biti pozitivan broj"
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Total reserved per interviewer"
@@ -357,13 +357,13 @@ msgstr ""
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Total reserved contacts should be a positive number"
-msgstr ""
+msgstr "Ukupan broj rezervisanih kontakata mora biti pozitivan broj"
 
 #: CRM/Campaign/Form/Survey/Questions.php
 msgid ""
 "There are no custom data sets for activity type \"%1\". To create one, <a "
 "href=\"%2\" target=\"%3\">click here</a>."
-msgstr ""
+msgstr "Nema sopstvenih setova podataka za tip aktivnosti \"%1\". Da kreirate jedan, <a href=\"%2\" target=\"%3\">kliknite ovde</a>."
 
 #: CRM/Campaign/Form/Survey/Questions.php
 msgid "Contact Info"
@@ -725,7 +725,7 @@ msgstr "Glasao/la?"
 
 #: templates/CRM/Campaign/Form/Gotv.tpl
 msgid "Is Reserved?"
-msgstr ""
+msgstr "Je rezervisan?"
 
 #: templates/CRM/Campaign/Form/Gotv.tpl
 msgid "Save as voted."
@@ -825,7 +825,7 @@ msgid ""
 "Enter up to ten (10) multiple choice options in this table (click 'another "
 "choice' for each additional choice).You can use existing result set options "
 "by selecting survey result set."
-msgstr ""
+msgstr "Unesite do deset (10) opcija izbora u ovu tabelu (kliknite 'dodaj izbor' za svaki sledeći izbor). Možete koristiti opcije postojećeg seta rezultata tako što ćete izabrati set rezultata ankete."
 
 #: templates/CRM/Campaign/Form/Search/Campaign.tpl
 #: templates/CRM/Campaign/Page/Campaign.tpl
@@ -882,7 +882,7 @@ msgstr "Tip ankete"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Reserve Each Time"
-msgstr ""
+msgstr "Rezerviši svaki put"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Total Reserve"
