--- a/po/id_ID/common-base.po
+++ b/po/id_ID/common-base.po
@@ -5,13 +5,14 @@
 # Translators:
 # donkomo <don.komo@yahoo.com>, 2011
 # Fery Setiawan <gembelweb@gmail.com>, 2015
+# Justin Snyder <jsnyder83@gmail.com>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-31 07:05+0000\n"
+"Last-Translator: Justin Snyder <jsnyder83@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -9956,7 +9957,7 @@ msgstr[0] ""
 #: CRM/Core/SelectValues.php xml/templates/civicrm_data.tpl
 msgid "week"
 msgid_plural "weeks"
-msgstr[0] ""
+msgstr[0] "minggu"
 
 #: CRM/Core/ShowHideBlocks.php templates/CRM/Custom/Form/Optionfields.tpl
 #: templates/CRM/Price/Form/OptionFields.tpl
@@ -25572,7 +25573,7 @@ msgstr ""
 
 #: CRM/Core/SelectValues.php
 msgid "Weeks"
-msgstr ""
+msgstr "Minggu"
 
 #: CRM/Core/SelectValues.php
 msgid "Days"
@@ -26581,7 +26582,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "This week"
-msgstr ""
+msgstr "Minggu ini"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This calendar month"
@@ -26601,7 +26602,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous week"
-msgstr ""
+msgstr "Minggu lalu"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous calendar month"
@@ -26649,7 +26650,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next week"
-msgstr ""
+msgstr "Minggu depan"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next calendar month"
@@ -26689,7 +26690,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current week to-date"
-msgstr ""
+msgstr "Minggu ini sampai tanggal"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current calendar month to-date"
@@ -26709,7 +26710,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous week"
-msgstr ""
+msgstr "Sampai dengan minggu lalu"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous calendar month"
@@ -26729,7 +26730,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current week"
-msgstr ""
+msgstr "Dari awal minggu ini"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current calendar month"
@@ -26745,7 +26746,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current week"
-msgstr ""
+msgstr "Sampai dengan akhir minggu ini"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current calendar month"
@@ -26765,7 +26766,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 weeks"
-msgstr ""
+msgstr "2 minggu yang lalu"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 calendar months"
@@ -26785,7 +26786,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Week prior to previous week"
-msgstr ""
+msgstr "Minggu kemarin lusa"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Month prior to previous calendar month"
@@ -26801,7 +26802,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous week"
-msgstr ""
+msgstr "Dari akhir minggu lalu"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous calendar month"
