--- a/po/sr_RS@latin/financial.po
+++ b/po/sr_RS@latin/financial.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-24 12:01+0000\n"
+"PO-Revision-Date: 2017-01-31 13:29+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -300,19 +300,19 @@ msgstr "Oznaka za predmet"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Site URL"
-msgstr ""
+msgstr "Podrazumevani URL produkcijskog sajta"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default API Site URL"
-msgstr ""
+msgstr "Podrazumevani URL API sajta"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Recurring Payments URL"
-msgstr ""
+msgstr "Podrazumevani URL produkcijskih periodičnih uplata"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Button URL"
-msgstr ""
+msgstr "Podrazumevani URL produkcijskog dugmeta"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test Site URL"
@@ -320,7 +320,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test API URL"
-msgstr ""
+msgstr "Podrazumevani API URL testa"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test Recurring Payment URL"
