po: update po/sr_RS@latin/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/drupal-civicrm.po
+++ b/po/sr_RS@latin/drupal-civicrm.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2017-01-25 20:52+0000\n"
+"PO-Revision-Date: 2017-01-31 15:27+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -374,7 +374,7 @@ msgstr "pregled profila"
 
 #: CRM/Core/Permission.php
 msgid "access all custom data"
-msgstr ""
+msgstr "pristup svim sopstvenim korisničkim podacima"
 
 #: CRM/Core/Permission.php
 msgid "view all activities"
@@ -406,7 +406,7 @@ msgstr "administracija rezervisanih tagova"
 
 #: CRM/Core/Permission.php
 msgid "administer dedupe rules"
-msgstr ""
+msgstr "administracija pravila deduplikacije"
 
 #: CRM/Core/Permission.php
 msgid "merge duplicate contacts"
@@ -522,7 +522,7 @@ msgid ""
 "create or administer custom data fields (e.g. volunteer skills, emergency "
 "contact info...) <a href=\"!1\">CiviCRM &raquo; Administer &raquo; Custom "
 "Data</a>."
-msgstr ""
+msgstr "Kreirajte i administrirajte sopstvena polja sa podacima (npr. veštine volontera, kontakt informacije za hitne slučajeve...) <a href=\"!1\">CiviCRM &raquo; Administracija &raquo; sopstvenih podataka</a>."
 
 #: drupal/civicrm.module
 msgid ""
@@ -1158,7 +1158,7 @@ msgstr "Numerički ID kontakta učesnika"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Contact, with custom fields"
-msgstr ""
+msgstr "CiviCRM kontakt, sa sopstvenim poljima"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Status of the Participant's Booking and Attendance"
