po: update po/sr_RS@latin/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-components.po
+++ b/po/sr_RS@latin/common-components.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-27 08:12+0000\n"
+"PO-Revision-Date: 2017-01-31 13:52+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -843,7 +843,7 @@ msgstr "Svaki"
 #: CRM/Contribute/Form/Contribution/Main.php
 #: CRM/Event/Form/Registration/Register.php
 msgid "Custom %1 is a required field if %1 is of type Customized."
-msgstr ""
+msgstr "Sopstveni %1 je obavezno polje ukoliko je %1 tip - sopstveni."
 
 #: CRM/Contribute/Form/Contribution.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -1293,7 +1293,7 @@ msgstr "Pogledajte onlajn dokumentaciju za više informacija o kreiranju %1 i %2
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "custom fields"
-msgstr ""
+msgstr "sopstvena polja"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
