--- a/po/sr_RS@latin/report.po
+++ b/po/sr_RS@latin/report.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-29 03:42+0000\n"
+"PO-Revision-Date: 2017-01-31 15:54+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1155,7 +1155,7 @@ msgstr "Svi (uključuje i anonimne)"
 
 #: CRM/Report/Form/Instance.php
 msgid "ACL Group/Role"
-msgstr ""
+msgstr "ACL grupa/uloga"
 
 #: CRM/Report/Form/Instance.php
 msgid "Parent Menu"
