--- a/po/sr_RS@latin/event.po
+++ b/po/sr_RS@latin/event.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-30 06:20+0000\n"
+"PO-Revision-Date: 2017-01-31 15:55+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1464,7 +1464,7 @@ msgstr "Uredi sve događaje"
 
 #: CRM/Event/Info.php
 msgid "Edit events even without specific ACL granted"
-msgstr ""
+msgstr "Uredi događaje i bez specifičnih ACL "
 
 #: CRM/Event/Info.php
 msgid "register for events"
@@ -2541,7 +2541,7 @@ msgstr "Testirajte ceo proces onlajn registracije - uključujući korisnička po
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid "live"
-msgstr ""
+msgstr "produkcijski"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid ""
