--- a/po/sr_RS@latin/pcp.po
+++ b/po/sr_RS@latin/pcp.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-29 03:38+0000\n"
+"PO-Revision-Date: 2017-01-31 13:25+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -776,7 +776,7 @@ msgstr "Vaša stranica lične kampanje"
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Your personal campaign page has been approved and is now live."
-msgstr ""
+msgstr "Vaša stranica lične kampanje je odobrena i sada je na produkcijskom sajtu."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
