po: update po/sv_SE/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/batch.po
+++ b/po/sv_SE/batch.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-24 23:38+0000\n"
+"PO-Revision-Date: 2017-01-31 09:59+0000\n"
 "Last-Translator: Kim Sanfridsson <kim.sanfridsson@ciruxia.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgstr "Återuppta sats"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Delete Batch"
-msgstr ""
+msgstr "Radera bearbetningssats"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -226,7 +226,7 @@ msgstr "Inga bearbetningssatser har skapats för denna webbplats."
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Payment Method"
-msgstr ""
+msgstr "Satsens betalningsmetod"
 
 #: CRM/Batch/DAO/EntityBatch.php
 msgid "EntityBatch ID"
@@ -261,4 +261,4 @@ msgstr ""
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Custom fields and a Personal Campaign Page field can be added if needed."
-msgstr ""
+msgstr "Egna skapade fält och fält från personlig kampanj kan läggas till om det behövs."
