po: update po/sr_RS@latin/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/menu.po
+++ b/po/sr_RS@latin/menu.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-24 11:25+0000\n"
+"PO-Revision-Date: 2017-01-31 15:54+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -133,7 +133,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Case Custom Set"
-msgstr ""
+msgstr "Sopstveni set predmeta"
 
 msgctxt "menu"
 msgid "Case"
@@ -370,7 +370,7 @@ msgstr "Nađi aktivnost"
 
 msgctxt "menu"
 msgid "Custom Data"
-msgstr ""
+msgstr "Sopstveni podaci"
 
 msgctxt "menu"
 msgid "Custom Data Fields"
@@ -513,7 +513,7 @@ msgstr "Zamene za reči"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Manage Custom Searches"
-msgstr ""
+msgstr "Menadžment sopstvenih pretraga"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -905,7 +905,7 @@ msgstr "Nađi i spoji duplikate kontakata"
 
 msgctxt "menu"
 msgid "Dedupe Exceptions"
-msgstr ""
+msgstr "Izuzeci deduplikacije"
 
 msgctxt "menu"
 msgid "Add User"
@@ -957,19 +957,19 @@ msgstr "Eksport kontakata"
 
 msgctxt "menu"
 msgid "ACL Roles"
-msgstr ""
+msgstr "ACL uloge"
 
 msgctxt "menu"
 msgid "Manage ACLs"
-msgstr ""
+msgstr "Menadžment ACLa"
 
 msgctxt "menu"
 msgid "Assign Users to ACL Roles"
-msgstr ""
+msgstr "Dodeli korisnicima ACL uloge"
 
 msgctxt "menu"
 msgid "ACL"
-msgstr ""
+msgstr "ACL"
 
 msgctxt "menu"
 msgid "Registration Page"
@@ -1558,12 +1558,12 @@ msgstr "Administraciona konzola"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Customize Data and Screens"
-msgstr ""
+msgstr "Sopstvena podešavanja podataka i ekrana"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Custom Fields"
-msgstr ""
+msgstr "Sosptvena polja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1633,7 +1633,7 @@ msgstr "Bezbedne ekstenzije fajlova"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Debugging and Error Handling"
-msgstr "Otklanjanje bagova i upravljanje greškama"
+msgstr "Debagovanje i upravljanje greškama"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1743,7 +1743,7 @@ msgstr "Developer"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "API Explorer"
-msgstr ""
+msgstr "API Explorer"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
