--- a/po/sr_RS@latin/event.po
+++ b/po/sr_RS@latin/event.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-31 15:55+0000\n"
-"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-02-01 15:55+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -267,7 +267,7 @@ msgstr "Podrazumevani ID kotizacije"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Discount Fee ID"
-msgstr ""
+msgstr "Podrazumevani ID snižene cene"
 
 #: CRM/Event/DAO/Event.php
 msgid "ThankYou Title"
@@ -375,7 +375,7 @@ msgstr "Iznos popusta"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Event Cart ID"
-msgstr ""
+msgstr "ID korpe sa događajima"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Must Wait on List"
@@ -576,7 +576,7 @@ msgid ""
 "At least one fee should be entered for your Discount Set. If you do not see "
 "the table to enter discount fees, click the \"Add Discount Set to Fee "
 "Table\" button."
-msgstr ""
+msgstr "Treba uneti bar jednu cenu za set popusta. Ukoliko ne vidite tabelu za unošenje sniženih cena, kliknite na dugme \"Dodaj set popusta u tabelu sa cenama\"."
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Please select financial type."
@@ -1363,7 +1363,7 @@ msgstr "Događaji po datumima"
 
 #: CRM/Event/Form/Task/Badge.php
 msgid "Make Name Badges"
-msgstr ""
+msgstr "Napravi bedževe sa imenima"
 
 #: CRM/Event/Form/Task/Batch.php
 msgid "Batch Update for Events"
@@ -1629,7 +1629,7 @@ msgstr "Promeni status učesnika"
 
 #: CRM/Event/Task.php
 msgid "Print Event Name Badges"
-msgstr ""
+msgstr "Odštampaj bedževe sa imenom za događaj"
 
 #: templates/CRM/Event/Cart/Form/Checkout/ConferenceEvents.tpl
 msgid "Choose Events For %1 (%2)"
@@ -1791,7 +1791,7 @@ msgid ""
 "The Payment Status for this participant is Completed. The Participant Status"
 " is set to Pending from pay later. Click Cancel if you want to review or "
 "modify these values before saving this record"
-msgstr ""
+msgstr "Status plaćanja za ovog učesnika je završen. Status učesnika je na čekanju: platite kasnije. Kliknite na Otkaži ako želite da proverite ili izmenite ove vrednosti pre nego što sačuvate zapis."
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "How should this change affect others in the series?"
@@ -1852,7 +1852,7 @@ msgid ""
 "This is the title that users will see when they are selecting an event "
 "template to clone for a new event. It is <em>not</em> the title of the event"
 " itself."
-msgstr ""
+msgstr "Ovo je naslov koji će se prikazivati korisnicima pri odabiru šablona događaja za kreiranje novog događaja. <em>Ne</em> predstavlja naslov događaja samog po sebi."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -1868,26 +1868,26 @@ msgid ""
 "and modify as needed for this specific event instance. Event templates do "
 "NOT store the event date and time - so you will definitely need to set those"
 " on this page."
-msgstr ""
+msgstr "Možete odabrati prethodno konfigurisan Šablon za događaj kako biste pojednostavili kreiranje vašeg novog događaja. Infomracije i konfiguracija će biti automatski kopirane u novi događaj. Nakon toga možete dodavati i uređivati po potrebi za ovaj konkretni događaj. Šabloni za događaj NE čuvaju podatke o datumu i vremenu događaja - to ćete morati podesiti na ovoj stranici."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
 "The Role you select here is automatically assigned to people when they "
 "register online for this event (usually the default 'Attendee' role)."
-msgstr ""
+msgstr "Uloga koju ovde odaberete automatski se pripisuje ljudima prilikom online registracije za ovaj događaj (obično podrazumevana uloga je 'Učesnik')."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
 "You can also allow people to choose a Role by creating a Profile with the "
 "Participant Role field. Then include that Profile when you configure the "
 "Online Registration page for this event."
-msgstr ""
+msgstr "Takođe možete dozvoliti ljudima da izaberu Ulogu kreirajući Profil sa poljem Uloga učesnika. Zatim uključite taj profil kada podešavate stranicu za Onlajn registraciju za ovaj događaj."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
 "To allow users to see a listing of participants, set this field to 'Name' "
 "(list names only), 'Name and Email', or 'Name, Status and Register Date'."
-msgstr ""
+msgstr "Da biste omogućili korisnicima da vide listu učesnika, podesite ovo polje u 'Ime' (samo imena listi), 'Ime i email', ili 'Ime, status i datum registracije'."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -1936,7 +1936,7 @@ msgid ""
 "waitlist work-flow (click the pencil icon, or navigate to Administer » "
 "CiviEvent » Participant Statuses). Then reload this form and check 'Offer a "
 "Waitlist?'."
-msgstr ""
+msgstr "Možete omogućiti korisnicima da se nađu na listi čekanja ako je događaj pun. Da biste omogućili ovu opciju morate prvo aktivirati Statuse učesnika koje koristi proces rada listi čekanja (kliknite na ikonicu sa olovkom, ili idite na Administracija » CiviEvent » Statusi učesnika).  Zatim ponovo učitajte ovaj formular i štiklirajte 'Ponudi listu čekanja?'."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -2034,7 +2034,7 @@ msgid ""
 "<strong>register and pay online</strong>, you will need to <a "
 "href='%1'>configure a Payment Processor</a> first. Then return to this "
 "screen and assign the processor to this event."
-msgstr ""
+msgstr "Nijedan procesor uplata nije konfigurisan/aktiviran za vaš sajt. Ukoliko je ovo <strong>događaj koji se plaća</strong> I želite da korisnici mogu da se <strong>registruju i plate online</strong>, moraćete prvo da <a href='%1'>konfigurišete Procesor uplate</a>. Zatim se vratite na ovaj ekran i izaberite procesor za ovaj događaj."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid "Select the currency to be used for event registration."
@@ -2052,20 +2052,20 @@ msgid ""
 "below without setting up a payment processor. All users will then be asked "
 "to submit payment offline (e.g. mail in a check, call in a credit card, "
 "etc.)."
-msgstr ""
+msgstr "Beleška: Kao alternativu, možete aktivirati opciju  <strong>Plati kasnije</strong> bez podešavanja procesora uplate. Od svih korisnika će zatim biti zatraženo da izvrše uplatu offline (npr.  čekom, kreditnom karticom itd)."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
 "Instructions added to Confirmation and Thank-you pages when the user selects"
 " the 'pay later' option (e.g. 'Mail your check to ... within 3 business "
 "days.')."
-msgstr ""
+msgstr "Instrukcije su dodate na Stranicu za Potvrdu i Stranicu za zahvalnost kada korisnik izabere opciju 'plati kasnije' (npr. 'Pošaljite račun ... u roku od tri radna dana.')."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
 "This label is displayed with the list of event fees. When using a Price Set,"
 " this label is the title for the section containing the price fields."
-msgstr ""
+msgstr "Ova oznaka se prikazuje uz listu kotizacija za događaj. Prilikom korišćenja Setova cena, ova oznaka je naslov odeljka koji sadrži polja sa cenama."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -2204,7 +2204,7 @@ msgstr ""
 msgid ""
 "Create a custom field group which is 'Used for' "
 "<strong>Participants</strong>."
-msgstr ""
+msgstr "Kreirajte sopstvenu grupu polja koja će se 'Koristiti za' <strong>Učesnike</strong>."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Add your field(s) this custom field group."
@@ -2653,7 +2653,7 @@ msgstr "Unesite poruku koja će se nalaziti na početku emaila sa potvrdom. PRIM
 
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "Print Name Badge"
-msgstr ""
+msgstr "Odštampaj bedževe sa imenom"
 
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "Configure this event"
