--- a/po/fr_CA/common-components.po
+++ b/po/fr_CA/common-components.po
@@ -6,6 +6,7 @@
 # AlexHobbit <sysadmin@cdeacf.ca>, 2015
 # lavamind <jerome@riseup.net>, 2011
 # lavamind <jerome@riseup.net>, 2011
+# Mathieu B <mathieu@brab.ca>, 2017
 # Mathieu Lu <mathieu@bidon.ca>, 2014-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
@@ -20,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-02 21:39+0000\n"
-"Last-Translator: Rick Paré\n"
+"PO-Revision-Date: 2017-02-01 06:05+0000\n"
+"Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2117,7 +2118,7 @@ msgstr "Destinataires prévus"
 #: templates/CRM/Mailing/Form/Task/Print.tpl
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Mailing Status"
-msgstr "État du mailing"
+msgstr "État du publipostage"
 
 #: ang/crmMailing/BlockReview.html
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
@@ -2290,7 +2291,7 @@ msgstr ""
 
 #: CRM/Mailing/Selector/Browse.php CRM/Report/Form/Contribute/RecurSummary.php
 msgid "Started"
-msgstr ""
+msgstr "Démarré"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Summary.php
 msgid "Unique Opens"
