--- a/po/fr_CA/report.po
+++ b/po/fr_CA/report.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-10 20:06+0000\n"
+"PO-Revision-Date: 2017-02-01 05:30+0000\n"
 "Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -2071,7 +2071,7 @@ msgstr ""
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Print to PDF"
-msgstr ""
+msgstr "Imprimer au format PDF"
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Export as CSV"
