po: update po/fr_CA/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -8,6 +8,7 @@
 # JeanBlais <velorutioneer@gmail.com>, 2014
 # lavamind <jerome@riseup.net>, 2011
 # lavamind <jerome@riseup.net>, 2011
+# Mathieu B <mathieu@brab.ca>, 2017
 # Mathieu Lu <mathieu@bidon.ca>, 2016
 # Mathieu Lu <mathieu@bidon.ca>, 2011,2013-2016
 # Paul Tibere <paul@koumbit.org>, 2013
@@ -28,8 +29,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-02 21:14+0000\n"
-"Last-Translator: Rick Paré\n"
+"PO-Revision-Date: 2017-02-02 02:23+0000\n"
+"Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -7007,7 +7008,7 @@ msgstr "Utiliser pour les envois massifs"
 
 #: CRM/Core/DAO/Email.php
 msgid "Hold Date"
-msgstr "Retenir la Date"
+msgstr "Date de suspension"
 
 #: CRM/Core/DAO/Email.php
 msgid "Reset Date"
@@ -8037,7 +8038,7 @@ msgstr "2 années précédentes "
 
 #: CRM/Core/Form/Date.php
 msgid "Previous 2 Quarters"
-msgstr "Précédents 2 trimestres"
+msgstr "2 trimestres précédents"
 
 #: CRM/Core/Form/Date.php
 msgid "Previous 2 Months"
@@ -8045,11 +8046,11 @@ msgstr "2 mois précédents"
 
 #: CRM/Core/Form/Date.php
 msgid "Previous 2 Weeks"
-msgstr "Deux dernières semaines"
+msgstr "2 semaines précédentes"
 
 #: CRM/Core/Form/Date.php
 msgid "Previous 2 Days"
-msgstr "Derniers deux jours"
+msgstr "2 jours précédents"
 
 #: CRM/Core/Form/Date.php
 msgid "Prior to Previous Year"
@@ -8077,7 +8078,7 @@ msgstr "Année précédente"
 
 #: CRM/Core/Form/Date.php
 msgid "Previous Fiscal Year"
-msgstr "Précédente année fiscale"
+msgstr "Année fiscale précédente"
 
 #: CRM/Core/Form/Date.php
 msgid "Previous Quarter"
@@ -23010,7 +23011,7 @@ msgstr "ct=[Particulier ou Foyer ou Organisation] obligatoire\ngt=[email_greetin
 
 #: xml/templates/civicrm_data.tpl
 msgid "Mail Reports"
-msgstr "Envoyer les rapports"
+msgstr "Rapports des envois "
 
 #: xml/templates/civicrm_data.tpl
 msgid "Generates and sends out reports via email"
@@ -24845,7 +24846,7 @@ msgstr ""
 
 #: CRM/Contact/ActionMapping.php
 msgid "Date Field"
-msgstr ""
+msgstr "Champ de date"
 
 #: CRM/Contact/ActionMapping.php
 msgid "Annual Options"
@@ -26680,11 +26681,11 @@ msgstr "Cette semaine"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This calendar month"
-msgstr ""
+msgstr "Mois en cours"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This quarter"
-msgstr ""
+msgstr "Ce trimestre"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This fiscal year"
@@ -26692,7 +26693,7 @@ msgstr "Cette année fiscale"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This calendar year"
-msgstr ""
+msgstr "L'année en cours"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous week"
@@ -26700,47 +26701,47 @@ msgstr "Semaine précédente"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous calendar month"
-msgstr ""
+msgstr "Mois précédent"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous quarter"
-msgstr ""
+msgstr "Trimestre précédent"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous fiscal year"
-msgstr ""
+msgstr "Année fiscale précédente"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous calendar year"
-msgstr ""
+msgstr "Année précédente"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 7 days including today"
-msgstr ""
+msgstr "Derniers 7 jours incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 30 days including today"
-msgstr ""
+msgstr "Derniers 30 jours incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 60 days including today"
-msgstr ""
+msgstr "Derniers 60 jours incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 90 days including today"
-msgstr ""
+msgstr "Derniers 90 jours incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 12 months including today"
-msgstr ""
+msgstr "Derniers 12 mois incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 2 years including today"
-msgstr ""
+msgstr "Dernières 2 années incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 3 years including today"
-msgstr ""
+msgstr "Dernières 3 années incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next week"
@@ -26748,167 +26749,167 @@ msgstr "Semaine prochaine"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next calendar month"
-msgstr ""
+msgstr "Mois prochain"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next quarter"
-msgstr ""
+msgstr "Prochain trimestre"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next fiscal year"
-msgstr ""
+msgstr "Prochaine année fiscale"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next calendar year"
-msgstr ""
+msgstr "Année prochaine"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 7 days including today"
-msgstr ""
+msgstr "Prochains 7 jours incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 30 days including today"
-msgstr ""
+msgstr "Prochains 30 jours incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 60 days including today"
-msgstr ""
+msgstr "Prochains 60 jours incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 90 days including today"
-msgstr ""
+msgstr "Prochains 90 jours incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 12 months including today"
-msgstr ""
+msgstr "Prochains 12 mois incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current week to-date"
-msgstr ""
+msgstr "Semaine en cours"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current calendar month to-date"
-msgstr ""
+msgstr "Mois en cours"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current quarter to-date"
-msgstr ""
+msgstr "Trimestre en cours"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current calendar year to-date"
-msgstr ""
+msgstr "Année en cours"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of yesterday"
-msgstr ""
+msgstr "Jusqu'à la fin d'hier"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous week"
-msgstr ""
+msgstr "Jusqu'à la fin de la semaine précédente"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous calendar month"
-msgstr ""
+msgstr "Jusqu'à la fin du mois précédent"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous quarter"
-msgstr ""
+msgstr "Jusqu'à la fin du trimestre précédent"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous calendar year"
-msgstr ""
+msgstr "Jusqu'à la fin de l'année précédente"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current day"
-msgstr ""
+msgstr "Depuis le début du jour courant"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current week"
-msgstr ""
+msgstr "Depuis le début de la semaine courante"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current calendar month"
-msgstr ""
+msgstr "Depuis le début du mois courant"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current quarter"
-msgstr ""
+msgstr "Depuis le début du trimestre courant"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current calendar year"
-msgstr ""
+msgstr "Depuis le début de l'année courante"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current week"
-msgstr ""
+msgstr "À la fin de la semaine en cours"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current calendar month"
-msgstr ""
+msgstr "À la fin du mois en cours"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current quarter"
-msgstr ""
+msgstr "À la fin du trimestre en cours"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current calendar year"
-msgstr ""
+msgstr "À la fin de l'année en cours"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 days"
-msgstr ""
+msgstr "2 jours précédents"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 weeks"
-msgstr ""
+msgstr "2 semaines précédentes"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 calendar months"
-msgstr ""
+msgstr "2 mois précédents"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 quarters"
-msgstr ""
+msgstr "2 trimestres précédents"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 calendar years"
-msgstr ""
+msgstr "2 années précédentes"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Day prior to yesterday"
-msgstr ""
+msgstr "Avant hier"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Week prior to previous week"
-msgstr ""
+msgstr "Semaine avant la semaine dernière"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Month prior to previous calendar month"
-msgstr ""
+msgstr "Mois précédant le mois dernier"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Quarter prior to previous quarter"
-msgstr ""
+msgstr "Trimestre précédent le trimestre dernier"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Year prior to previous calendar year"
-msgstr ""
+msgstr "Année précédent la dernière année"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous week"
-msgstr ""
+msgstr "Depuis la fin de la semaine précédente"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous calendar month"
-msgstr ""
+msgstr "Depuis la fin du mois précédent"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous quarter"
-msgstr ""
+msgstr "Depuis la fin du trimestre précédent"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous calendar year"
-msgstr ""
+msgstr "Depuis la fin de l'année précédente"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue - Event Fee"
